# typst-spellcheck

./: .gitignore  Cargo.toml
crates/typst-spellcheck/: Cargo.toml
crates/typst-spellcheck-cli/: Cargo.toml
crates/typst-spellcheck-cli/src/: args.rs  config_file.rs  logger.rs  main.rs  output.rs
crates/typst-spellcheck/src/: lib.rs  problem.rs  range.rs  word_count.rs
crates/typst-spellcheck/src/preprocessor/: merge_short.rs  mod.rs  paragraph.rs
crates/typst-spellcheck/src/spellchecker/: check_file.rs  debug.rs  metadata.rs  mod.rs
